src/mgr/PyModules.cc
@@ -745,7 +745,10 @@ PyObject* PyModules::get_perf_schema_python(
       daemon_name << key.first << "." << key.second;
       f.open_object_section(daemon_name.str().c_str());
 
-      for (auto typestr : state->perf_counters.declared_types) {
+      Mutex::Locker l(state->lock);
+      for (const auto &ctr_inst_iter : state->perf_counters.instances) {
+        const auto &typestr = ctr_inst_iter.first;
+
 	f.open_object_section(typestr.c_str());
 	auto type = state->perf_counters.types[typestr];
 	f.dump_string("description", type.description);
